# knarkos

./: .gitignore  Cargo.toml  Justfile  README.md  flake.nix
.github/workflows/: build.yml
lisp/: Cargo.toml
lisp/src/: compile.rs  lib.rs  main.rs  parse.rs
os/: Cargo.toml
os/.cargo/: config.toml
os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  repl.rs  serial.rs  vga.rs
src/: gdt.rs  init.rs  interrupts.rs  lib.rs  main.rs  serial.rs  vga.rs
