[package]
name = "knarkos"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.9.8"
x86_64 = "0.14.2"
volatile = "0.2.6"
uart_16550 = "0.2.0"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}

[package.metadata.bootimage]
test-success-exit-code = 33
test-args = [
  "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
  "-display", "none"
]
run-args = [
  "-serial", "stdio"
]
